:fire: build(profile): add lwinmoepaing profile

--- a/content/profile/lwinmoepaing.mdx
+++ b/content/profile/lwinmoepaing.mdx
@@ -1,15 +1,28 @@
 ---
-name: Sample
-description: I'm software developer
+name: Lwin Moe Paing
+description: I'm senior frontend engineers and looking for help with **Javascript Language to build Many Free Softwares to help people who can't afford to pay !!
+image: "https://avatars.githubusercontent.com/u/49163775?v=4"
+tags:
+  - Fullstack
+  - Frontend
+  - JavaScript
+  - ReactJS
+  - SolidJS
 ---
 
-<h3 align="left" className="flex flex-row mt-2">
+<div className="h-28 w-28 rounded-full overflow-hidden mx-auto">
+  <img src="https://avatars.githubusercontent.com/u/49163775?v=4" />
+</div>
+
+<h3 className="flex flex-row max-w-[240px] mt-5 mx-auto">
   <img
     src="https://raw.githubusercontent.com/lwinmoepaing/lwinmoepaing/main/img/gitto.gif"
-    className="h-[20px] object-contain"
+    className="h-[20px] object-contain mr-2"
   />
   <span> Hi, I'm Lwin Moe Paing </span>
 </h3>
+
+<div className="container max-w-[720px] mx-auto">
 
 - 🤝 I’m looking for help with **Javascript Language to build Many Free Softwares to help people who can't afford to pay !!**
 - 💬 Ask me about **React, React Native & Nodejs.**
@@ -50,3 +63,5 @@ const Lwin = {
   challenge: "Nothing in life is permanent. so i'm trying to be always humble",
 };
 ```
+
+</div>
