--- a/content/profile/saizayarhtet.mdx
+++ b/content/profile/saizayarhtet.mdx
@@ -13,15 +13,13 @@ tags:
   <img src="https://avatars.githubusercontent.com/u/53620449?v=4" />
 </div>
 
-<h3 className="text-center mt-5">
-  <span className="font-bold">Hi,My name is</span>
-</h3>
+<p className="text-center mt-5">Hi,My name is</p>
 
-<h1 className="text-center mt-2">
+<h1 className="text-center mt-1">
   <span className="font-bold text-2xl">Sai Zayar Htet</span>
 </h1>
 
-<h3 className="text-center">A flutter developer @ SFEG</h3>
+<h3 className="text-center mt-1">A flutter developer @ SFEG</h3>
 
 <div className="container  max-w-[720px] mx-auto">
 - 🌱 I’m currently learning **Flutter,React,Swift**
