--- a/content/profile/lwinmoepaing.mdx
+++ b/content/profile/lwinmoepaing.mdx
@@ -1,6 +1,6 @@
 ---
 name: Lwin Moe Paing
-description: I'm senior frontend engineers and looking for help with **Javascript Language to build Many Free Softwares to help people who can't afford to pay !!
+description: I'm senior frontend engineer and looking for help with JS Language to build Many Free Softwares to help people who can't afford to pay !!
 image: "https://avatars.githubusercontent.com/u/49163775?v=4"
 tags:
   - Fullstack
