:bug: fix: fix fb link \& typo

--- a/content/profile/nyiyenaing.mdx
+++ b/content/profile/nyiyenaing.mdx
@@ -28,13 +28,13 @@ tags:
 
     <span className="my-4 font-bold"><strong className="text-sky-200">##</strong> Contact Me?</span>
     <span>\+ \[mail\] \('guesszero24@gmail.com'\)</span>
-    <span>\+ \[facebook\] [Nyi Ye Naing]('https://www.facebook.com/profile.php?id=100014951477888')</span>
+    <span>\+ \[facebook\] [Nyi Ye Naing](https://www.facebook.com/profile.php?id=100014951477888)</span>
 
     <span className="my-4 font-bold"><strong className="text-sky-200">##</strong> Knowledge of</span>
     <span>\+ How to write <strong className="text-orange-500">\*Clean Code\*</strong></span>
     <span>\+ A bunch of <strong className="text-orange-500">\*Design Patterns\*</strong></span>
     <span>\+ building efficient <strong className="text-orange-500">\*API services\*</strong></span>
-    <span>\+ can <strong className="text-orange-500">\*exit vim\*</strong> in 5 difference ways ;).</span>
+    <span>\+ can <strong className="text-orange-500">\*exit vim\*</strong> in 5 different ways ;).</span>
     
     
 </div>
