:fire: build(profile): add aungyezaw profile

--- a/content/profile/nyiyenaing.mdx
+++ b/content/profile/nyiyenaing.mdx
@@ -1,7 +1,7 @@
 ---
 name: Nyi Ye Naing
 description: I'm just a curious coder with a humble spirit.
-image: "https://avatars.githubusercontent.com/u/45783468?s=400&u=0bd5e93b111253f142aca9b5d347a1a71dd567e6&v=4"
+image: "https://avatars.githubusercontent.com/u/45783468?s=400&v=4"
 tags: 
     - Laravel
     - Javascript
