:fire: build(profile): add ivan profile

--- a/content/profile/ivan.mdx
+++ b/content/profile/ivan.mdx
@@ -1,6 +1,6 @@
 ---
 name: Ivan
-description: Fullstack Framwork Developer
+description: Fullstack Developer
 image: "https://avatars.githubusercontent.com/u/75617509?v=4"
 tags:
   - Fullstack
