--- a/content/profile/issackhant.mdx
+++ b/content/profile/issackhant.mdx
@@ -10,7 +10,7 @@ tags:
   - IOS
 ---
 
-<div className="h-28 w-28 rounded-full overflow-hidden mx-auto">
+<div className="h-28 w-28 border-dotted border-2 rounded-full overflow-hidden mx-auto">
   <img src="https://avatars.githubusercontent.com/u/63854143?u=52ff4942c2ce6857c1fe412f2f0a9bfc86324d9c&v=4" />
 </div>
 
@@ -21,8 +21,30 @@ tags:
 </h3>
 
 <div className="container max-w-[720px] mx-auto">
-<div className="flex justify-center mt-5 text-orange-400">
-On going....
+<div className="flex flex-col justify-center mt-5">
+  <span className="mx-2 my-2 text-cyan-200">👨‍💻 About me</span>
+  <div className="h-30 border-2 rounded-lg border-orange-300  bg-slate-700 border-dotted w-[1200]">
+  <div className="flex justify-center flex-col">
+  <span className="px-2 py-2"> I'm a fullstack developer working on various projects. </span>
+  
+  </div>
+  
+  
+  </div>
+  <span className="mx-2 my-2 text-cyan-200">🌱 What am I doing at the moment.</span>
+  <div className="h-30 border-2 rounded-lg border-dotted bg-slate-700 border-orange-300 w-[1200]">
+  <div className="flex justify-center flex-col">
+  <span className="px-2 py-2">I'm learning new things day by day and chasing my dream to become a creative developer. </span>
+  
+  </div>
+  
+  
+  </div>
+  - 📫 Reach me at **issaciscoding@gmail.com** [or] **[Website](https://issackhant.vercel.app/)**
+
 </div>
+```javascript
+  console.log("Issac is trying");
+```
 
 </div>
