--- a/content/profile/khun.mdx
+++ b/content/profile/khun.mdx
@@ -20,7 +20,7 @@ tags:
   <span className="font-bold text-2xl text-blue-200">Khun Pyae Phyo Aung</span>
 </h1>
 
-<p className="text-center mt-2">A junior backend developer @ DAT</p>
+<p className="text-center mt-2">A junior backend developer @ <a className="text-blue-400" href="https://www.diracetechnology.com/" target="_blank">DAT</a></p>
 
 <div className="container max-w-[720px] mx-auto mt-10">
 
@@ -39,9 +39,9 @@ tags:
     - Data Structures and Algorithms
 
     <h2 className="font-bold text-xl text-yellow-200 mt-10"># Contact Me</h2>
-    - <a href="https://github.com/KhunPyaePhyoAung" target="_blank"><span className="text-green-500">GitHub</span></a>
-    - <a href="mailto:khunpyaephyoaung74@gmail.com"><span className="text-red-300">Mail</span></a>
-    - <a href="https://www.facebook.com/profile.php?id=100008700558024" target="_blank"><span className="text-blue-300">Facebook</span></a>
+    - <div><span className="text-green-500">GitHub</span> <a href="https://github.com/KhunPyaePhyoAung" target="_blank">[github&sdot;com/KhunPyaePhyoAung]</a></div>
+    - <div><span className="text-red-300">Mail</span> <a href="mailto:khunpyaephyoaung74@gmail.com">[khunpyaephyoaung74@gmail&sdot;com]</a></div>
+    - <div><span className="text-blue-300">Facebook</span> <a href="https://www.facebook.com/profile.php?id=100008700558024" target="_blank">[Khun Pyi Thar Hein]</a></div>
 
     <div className="my-10 text-xl text-yellow-200 font-bold">
         Let's work together to build a thriving software development community.
