:fire: build(profile): add kaungminkhant

--- a/content/profile/kaungminkhant.mdx
+++ b/content/profile/kaungminkhant.mdx
@@ -1,7 +1,7 @@
 ---
 name: Kaung Min Khant
 description: I am the real DEAL!!
-image: "https://avatars.githubusercontent.com/u/49163775?v=4"
+image: "https://unsplash.com/photos/gray-stainless-steel-armor-JOzv_pAkcMk"
 tags:
   - Typescript
   - JavaScript
