:fire: build(profile): edited and added kaungminkhant

--- a/content/profile/kaungminkhant.mdx
+++ b/content/profile/kaungminkhant.mdx
@@ -1,6 +1,6 @@
 ---
 name: Kaung Min Khant
-description: I am the real DEAL!!
+description: I use Typescript and Reactjs together to create dynamic and amazing projects!
 image: "https://unsplash.com/photos/gray-stainless-steel-armor-JOzv_pAkcMk"
 tags:
   - Typescript
