:fire: build(profile): add aungmon profile

--- a/content/profile/aungmon.mdx
+++ b/content/profile/aungmon.mdx
@@ -81,5 +81,5 @@ tags:
     />
   </div>
 </div>
-
+- 📫 How to reach me - [Github](https://github.com/Amoz19) || [Linkedin](https://www.linkedin.com/in/aungmon19/) || [Facebook](https://www.facebook.com/callmeamoz/) 
 </div>
