:fire: build(profile): added kaungminkhant

--- a/content/profile/kaungminkhant.mdx
+++ b/content/profile/kaungminkhant.mdx
@@ -10,6 +10,6 @@ tags:
 ---
 
 <div>
-    <p>I am the real deal</p>
+    <p>Hi I am Kaung Min Khant, I am here to help you with Javascript!</p>
 
 </div>
