:fire: build(profile): added image

--- a/content/profile/kaungminkhant.mdx
+++ b/content/profile/kaungminkhant.mdx
@@ -1,7 +1,7 @@
 ---
 name: Kaung Min Khant
 description: I use Typescript and Reactjs together to create dynamic and amazing projects!
-image: "https://unsplash.com/photos/gray-stainless-steel-armor-JOzv_pAkcMk"
+image: "https://www.pixel4k.com/wp-content/uploads/2021/03/hiroyuki-sanada-as-scorpion-mortal-kombat-4k_1615192289-2048x1152.jpg.webp"
 tags:
   - Typescript
   - JavaScript
