:fire: build(profile): added a profile

--- a/content/profile/kaungminkhant.mdx
+++ b/content/profile/kaungminkhant.mdx
@@ -5,7 +5,7 @@ image: "https://www.pixel4k.com/wp-content/uploads/2021/03/hiroyuki-sanada-as-sc
 tags:
   - Typescript
   - JavaScript
-  - PHP
+  - NodeJS
   - ReactJS
 ---
 
