:fire: build(profile): add kaungminkhant profile

--- a/content/profile/kaungminkhant.mdx
+++ b/content/profile/kaungminkhant.mdx
@@ -1,11 +1,11 @@
 ---
 name: Kaung Min Khant
-description: I am a frontend developer. I can do ReactJs!
+description: I am a frontend developer.  I can do ReactJs!
 image: "https://www.pixel4k.com/wp-content/uploads/2021/03/hiroyuki-sanada-as-scorpion-mortal-kombat-4k_1615192289-2048x1152.jpg.webp"
 tags:
   - Typescript
   - JavaScript
-  - NodeJS
+  - NodeJs
   - ReactJS
 ---
 
