--- a/content/profile/thiriag.mdx
+++ b/content/profile/thiriag.mdx
@@ -1,12 +1,134 @@
 ---
-name: Yan Lin Oo
-description: Junior web developer. I'm still learning and looking for a job!
-image: "https://i1.sndcdn.com/artworks-8OBzhaNoiX6AAyCs-fC1usQ-t500x500.jpg"
+name: Thiri Aung
+description: A young front end developer. I'm still learning and looking for a job!
+image: "https://avatars.githubusercontent.com/u/104716337?v=4"
 tags:
   - HTML
   - CSS
   - JavaScript
   - ReactJS
-  - PHP
-  - Laravel
+  - NodeJS
 ---
+
+<div className="container max-w-[720px] mx-auto">
+
+<h1 align="center">Hi 👋, I'm Thiri Aung</h1>
+
+<h3 align="center">A young front end developer </h3>
+<p className="flex justify-center mt-3">
+  <img src="https://komarev.com/ghpvc/?username=thiriaung" alt="thiriaung" />
+</p>
+
+- 🤔 I’m learning full stack development
+- 🌱 I'm addicted to learning and growing everyday
+- 💬 Ask me about **react**
+- 📫 Reach me at **thiriaung812003@gmail.com**
+- 👨‍💻 All of my projects are available at [thiriaung]()
+- ⚡ Fun fact **Chai tastes way better than Coffee | Change my mind!**
+
+<h3 align="">Languages and Tools:</h3>
+<p align="left" className="flex flex-row gap-2 pt-2">
+  <a href="https://www.w3.org/html/" target="_blank">
+    <img
+      src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg"
+      alt="html5"
+      width="40"
+      height="40"
+    />
+  </a>
+  <a href="https://www.w3schools.com/css/" target="_blank">
+    <img
+      src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg"
+      alt="css3"
+      width="40"
+      height="40"
+    />
+  </a>
+  <a
+    href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+    target="_blank"
+  >
+    <img
+      src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg"
+      alt="javascript"
+      width="40"
+      height="40"
+    />
+  </a>
+  <a href="https://nodejs.org/en" target="_blank">
+    <img
+      src="https://raw.githubusercontent.com/devicons/devicon/master/icons/nodejs/nodejs-original-wordmark.svg"
+      alt="nodejs"
+      width="40"
+      height="40"
+    />
+  </a>
+  <a href="https://expressjs.com" target="_blank">
+    <img
+      src="https://raw.githubusercontent.com/devicons/devicon/master/icons/express/express-original-wordmark.svg"
+      alt="express"
+      width="40"
+      height="40"
+    />
+  </a>
+  <a href="https://vuejs.org/" target="_blank">
+    <img
+      src="https://raw.githubusercontent.com/devicons/devicon/master/icons/vuejs/vuejs-original-wordmark.svg"
+      alt="vuejs"
+      width="40"
+      height="40"
+    />
+  </a>
+  <a href="https://reactjs.org/" target="_blank">
+    <img
+      src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original-wordmark.svg"
+      alt="react"
+      width="40"
+      height="40"
+    />
+  </a>
+  <a href="https://www.gatsbyjs.com/" target="_blank">
+    <img
+      src="https://www.vectorlogo.zone/logos/gatsbyjs/gatsbyjs-icon.svg"
+      alt="gatsby"
+      width="40"
+      height="40"
+    />
+  </a>
+  <a href="https://sass-lang.com" target="_blank">
+    <img
+      src="https://raw.githubusercontent.com/devicons/devicon/master/icons/sass/sass-original.svg"
+      alt="sass"
+      width="40"
+      height="40"
+    />
+  </a>
+  <a href="https://tailwindcss.com/" target="_blank">
+    <img
+      src="https://www.vectorlogo.zone/logos/tailwindcss/tailwindcss-icon.svg"
+      alt="tailwind"
+      width="40"
+      height="40"
+    />
+  </a>
+  <a href="https://www.postgresql.org" target="_blank">
+    <img
+      src="https://raw.githubusercontent.com/devicons/devicon/master/icons/postgresql/postgresql-original-wordmark.svg"
+      alt="postgresql"
+      width="40"
+      height="40"
+    />
+  </a>
+  <a href="https://www.adobe.com/products/xd.html" target="_blank">
+    <img
+      src="https://cdn.worldvectorlogo.com/logos/adobe-xd.svg"
+      alt="xd"
+      width="40"
+      height="40"
+    />
+  </a>
+</p>
+
+![Anurag's GitHub stats](https://github-readme-stats.vercel.app/api?username=cammi500&show_icons=true&theme=tokyonight)
+
+</div>
