:fire: build(profile): add ivan profile

--- a/content/profile/ivan.mdx
+++ b/content/profile/ivan.mdx
@@ -51,4 +51,68 @@ Hi 👋, I'm Ivan
     <p className="hidden md:block" >![JavaScript](https://img.shields.io/badge/javascript-%23323330.svg?style=flat&logo=javascript&logoColor=%23F7DF1E)</p>
     <p className="hidden md:block" >![Flutter](https://img.shields.io/badge/flutter-%23039BE5.svg?style=flat&logo=flutter&logoColor=white)</p>
   </div>
+
+
+  <div className='my-10 flex gap-2 justify-center '>
+    <a href='https://mms-it.com/certificate/mini/certificate_5ffbe00b8858c.jpg' className='lg:w-2/12 w-4/12 rounded' target='_blank'>
+      <img src='https://mms-it.com/certificate/mini/certificate_5ffbe00b8858c.jpg' className=' rounded'></img>
+    </a>
+
+    <a href='https://mms-it.com/certificate/mini/certificate_623c988182248.jpg' className='lg:w-2/12 w-4/12 rounded' target='_blank'>
+         <img src='https://mms-it.com/certificate/mini/certificate_623c988182248.jpg' className=' rounded'></img>
+    </a>
+
+     <a href='https://mms-it.com/certificate/mini/certificate_623c9887e8f9d.jpg' className='lg:w-2/12 w-4/12 rounded' target='_blank'>
+      <img src='https://mms-it.com/certificate/mini/certificate_623c9887e8f9d.jpg' className=' rounded'></img>
+    </a>
+
+  </div>
+
+
+<div className='md:w-6/12 mx-auto '>
+
+  <div class='flex justify-start gap-3 items-center '>
+    <p>![Laravel](https://img.shields.io/badge/laravel-%23FF2D20.svg?style=flat&logo=laravel&logoColor=white)</p>
+    <h4 className='uppercase '>Backend Projects</h4>
+  </div>
+  <div className='mb-8 mt-3  flex gap-2 justify-start '>
+    <a href='https://play.google.com/store/apps/details?id=com.hapeyecoltd.food.com.mm&hl=en&gl=US' target='_blank'>
+        <img src='https://play-lh.googleusercontent.com/ViOHsGL1lPmMxge79Qek6W3x8bnt7KY2PjUiD-Ewih7dsm0_U-WkZeoDOjinzNjopYkl=w480-h960-rw' className='w-10 h-10  rounded-full '></img>
+    </a>
+    <a href='https://play.google.com/store/apps/details?id=com.hapeye.kweelamin&hl=en&gl=US' target='_blank'>
+        <img src='https://play-lh.googleusercontent.com/IRI91YVNDTk6WCBaKYM2ghpA8A41356N9ZE-gf1ezBPiCBSw5lRtfhw_vXH1wmnW4Q=w480-h960-rw' className='w-10 h-10  rounded-full '></img>
+    </a>
+     <a href='https://play.google.com/store/apps/details?id=com.hapeyecoltd.shwephoneshein&hl=en&gl=US' target='_blank'>
+        <img src='https://play-lh.googleusercontent.com/lvv5p0FjvIC6WBIkxjDZCxxuxHfmxgOEDqqxvfBjgpB-h3gRmeM22HZ-T6Zm1c0cyx4=w480-h960-rw' className='w-10 h-10  rounded-full '></img>
+    </a>
+  </div>
+
+ <div class='flex justify-start gap-3 items-start flex-col md:flex-row  '>
+    <div class='flex gap-2  '>
+    <p>![Laravel](https://img.shields.io/badge/laravel-%23FF2D20.svg?style=flat&logo=laravel&logoColor=white)</p>
+    <p  >![Flutter](https://img.shields.io/badge/flutter-%23039BE5.svg?style=flat&logo=flutter&logoColor=white)</p>
+    </div>
+    <h4 className='uppercase '>Backend And Mobile Projects</h4>
+  </div>
+  <div className='mb-8 mt-3   flex gap-2 justify-start '>
+    <a href='https://play.google.com/store/apps/details?id=com.mawkon.hapeye.lms&hl=en&gl=US' target='_blank'>
+        <img src='https://play-lh.googleusercontent.com/6RMOQvJbVHnHqMyYwIJdLprfZSrXj1QmKshXzqlGD8rm7CHWtN8EO3FnqONdv8IOdg=w480-h960-rw' className='w-10 h-10  rounded-full '></img>
+    </a>
+    <a href='https://play.google.com/store/apps/details?id=com.hapeye.gold.mobile&hl=en&gl=US' target='_blank'>
+        <img src='https://play-lh.googleusercontent.com/oQz24unBKTohyPnZaG-gYNIgCY6lG1ziTOAusNVSVNd5B975ZhQHR0xeMSFwSi-DUA=w480-h960-rw' className='w-10 h-10  rounded-full '></img>
+    </a>
+  <a href='https://play.google.com/store/apps/details?id=com.kosailms.app&hl=en&gl=US' target='_blank'>
+        <img src='https://play-lh.googleusercontent.com/bvaTbFZd0IAHlniX921bLbGYKFDR8mGpKnBl3_83DRuoTcBM7RYhbfrxxg__ra3si5SK=w480-h960-rw' className='w-10 h-10  rounded-full '></img>
+    </a>
+
+  </div>
+
+
+
+
+
+</div>
+
+
+
 </div>
