--- a/content/profile/zinlinkhant.mdx
+++ b/content/profile/zinlinkhant.mdx
@@ -1,6 +1,6 @@
 ---
 name: Zin Lin Khant
-description: I'm senior frontend engineer and looking for help with JS Language to build Many Free Softwares to help people who can't afford to pay !!
+description: I am a beginner full stack developer with no experience!
 image: "https://scontent.frgn2-1.fna.fbcdn.net/v/t39.30808-6/263686930_980350869360473_2699874875705552650_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=5f2048&_nc_ohc=Mqa60lLVn1QAX_l_Jp8&_nc_ht=scontent.frgn2-1.fna&oh=00_AfBNijv-MQ3dgcg1B20xzRe8Os-9BYhe11wIBgECzqcjDA&oe=65376F8D"
 tags:
   - HTML
