:bug: fix(profile): sperate profile list and profile item component

--- a/content/profile/lwinmoepaing.mdx
+++ b/content/profile/lwinmoepaing.mdx
@@ -16,6 +16,15 @@ import SpacingDivider from "@/components/Common/SpacingDivider/SpacingDivider";
 
 <div className="flex flex-col md:flex-row">
   <div className="md:w-6/12 mb-5 flex flex-col justify-center items-center">
+    {/* <ProfileCardItem 
+      _id="lwinmoepaing"
+      slugAsParams="lwinmoepaing"
+      name="Lwin Moe Paing"
+      description="I'm senior frontend engineer and looking for help with JS Language to build Many Free Softwares to help people who can't afford to pay !!"
+      image="https://avatars.githubusercontent.com/u/49163775?v=4"
+      tags={["Fullstack","Frontend","JavaScript","ReactJS","SolidJS"]}
+      searchTag=""
+    /> */}
     <div className="h-28 w-28 rounded-3xl overflow-hidden mx-auto">
       <img src="https://avatars.githubusercontent.com/u/49163775?v=4" />
     </div>
