:fire: build(profile): added iframe and fix some text

--- a/content/profile/issackhant.mdx
+++ b/content/profile/issackhant.mdx
@@ -10,15 +10,21 @@ tags:
   - IOS
 ---
 
-<div className="h-28 w-28 border-dotted border-2 rounded-full overflow-hidden mx-auto">
+<div className="h-28 w-28 border-dotted border-2 rounded-full overflow-hidden mx-auto border-orange-300">
   <img src="https://avatars.githubusercontent.com/u/63854143?u=52ff4942c2ce6857c1fe412f2f0a9bfc86324d9c&v=4" />
 </div>
 
 <h3 className="flex flex-row max-w-[240px] mt-5 mx-auto">
   <span className="mx-2 animate-bounce"> ☕️ </span>
 
-  <span> Hola, IssacKhant here </span>
+  <span className=" animate-bounce bg-orange-300 text-black"> Hola, IssacKhant here </span>
 </h3>
+<div className="md:h-[700px] h-[700px] border border-dotted border-2 border-orange-300 mt-2">
+  <iframe
+    src="https://issackhant.vercel.app/"
+    className="h-full w-full relative "
+  />
+</div>
 
 <div className="container max-w-[720px] mx-auto">
 <div className="flex flex-col justify-center mt-5">
@@ -40,7 +46,7 @@ tags:
   
   
   </div>
-  - 📫 Reach me at **issaciscoding@gmail.com** [or] **[Website](https://issackhant.vercel.app/)**
+  - 📫 Reach me at **issaciscoding@gmail.com** [or] **[Website](🧑‍🔧 under maintenance)**
 
 </div>
 ```javascript
