:bug: fix(profile): for contributor profile

--- a/content/profile/edothedev.mdx
+++ b/content/profile/edothedev.mdx
@@ -16,7 +16,7 @@ tags:
   - Figma
   - Git
 ---
-import Edo from "./edothedev/Edo.jsx";
+import Edo from "@/components/Contributors/EdoTheDev/Edo";
 
 <div className="md:h-[75vh] h-[50vh] border-4 border-b-gray-50 rounded-3xl overflow-hidden">
     <Edo />
