--- a/content/profile/aungminhein.mdx
+++ b/content/profile/aungminhein.mdx
@@ -1,5 +1,6 @@
 ---
 name : Aung Min Hein
+image : "https://letsenhance.io/static/334225cab5be263aad8e3894809594ce/75c5a/MainAfter.jpg"
 description : A creative and dumb developer.
 tags : 
 -   Php
