:fire: build(profile): fixed profile layout design and fixed some tags

--- a/content/profile/issackhant.mdx
+++ b/content/profile/issackhant.mdx
@@ -3,11 +3,12 @@ name: IssacKhant
 description: A kid trying to achieve his dreams.
 image: "https://avatars.githubusercontent.com/u/63854143?u=52ff4942c2ce6857c1fe412f2f0a9bfc86324d9c&v=4"
 tags:
-  - ReactJS
+  - React Native
   - NextJS
   - JavaScript
   - Fullstack
-  - IOS
+  - Swift
+  - ThreeJS
 ---
 
 <div className="h-28 w-28 border-dotted border-2 rounded-full overflow-hidden mx-auto border-orange-300">
@@ -19,14 +20,16 @@ tags:
 
   <span className=" animate-bounce bg-orange-300 text-black"> Hola, IssacKhant here </span>
 </h3>
-<div className="md:h-[700px] h-[700px] border border-dotted border-2 border-orange-300 mt-2">
+
+<div className=" flex md:flex-row flex-col">
+<div className="h-[700px] w-[400px] border-dotted border-2 border-orange-300 mt-2">
   <iframe
     src="https://issackhant.vercel.app/"
     className="h-full w-full relative "
   />
 </div>
 
-<div className="container max-w-[720px] mx-auto">
+<div className="container md:mt-8 max-w-[720px] mx-auto">
 <div className="flex flex-col justify-center mt-5">
   <span className="mx-2 my-2 text-cyan-200">👨‍💻 About me</span>
   <div className="h-30 border-2 rounded-lg border-orange-300  bg-slate-700 border-dotted w-[1200]">
@@ -37,7 +40,7 @@ tags:
   
   
   </div>
-  <span className="mx-2 my-2 text-cyan-200">🌱 What am I doing at the moment.</span>
+  <span className="mx-2 my-2 text-cyan-200">🌱 What I am doing at the moment.</span>
   <div className="h-30 border-2 rounded-lg border-dotted bg-slate-700 border-orange-300 w-[1200]">
   <div className="flex justify-center flex-col">
   <span className="px-2 py-2">I'm learning new things day by day and chasing my dream to become a creative developer. </span>
@@ -53,4 +56,5 @@ tags:
   console.log("Issac is trying");
 ```
 
+</div>
 </div>
