--- a/content/profile/myintthuaung.mdx
+++ b/content/profile/myintthuaung.mdx
@@ -10,12 +10,12 @@ tags:
 ---
 
 <div className="h-28 w-28 rounded-full overflow-hidden mx-auto">
-  <img src="https://avatars.githubusercontent.com/u/49163775?v=4" />
+  <img src="https://avatars.githubusercontent.com/u/61960531?s=400&u=da962590ef4a1e61e1aeca886b02bcac59a10565&v=4" />
 </div>
 
 <h3 className="flex flex-row max-w-[240px] mt-5 mx-auto">
   <img
-    src="https://raw.githubusercontent.com/lwinmoepaing/lwinmoepaing/main/img/gitto.gif"
+    src="https://avatars.githubusercontent.com/u/61960531?s=400&u=da962590ef4a1e61e1aeca886b02bcac59a10565&v=4"
     className="h-[20px] object-contain mr-2"
   />
   <span> Hi, I'm Myint Thu Aung </span>
@@ -23,9 +23,9 @@ tags:
 
 <div className="container max-w-[720px] mx-auto">
 
-- 🤝 I’m looking for help with **Javascript Language to build Many Free Softwares to help people who can't afford to pay !!**
-- 💬 Ask me about **React, React Native & Nodejs.**
-- 📫 How to reach me **lwinmoepaing.dev@gmail.com (or) [facebook](https://www.facebook.com/lwin.im/)**
+- 🤝 I'm web developer with a background in computer science and software engineering with C#,ASP.NET,MVC.
+- 💬 
+- 📫  **myintthuaung.km@gmail.com**
 
 <div className="flex flex-row gap-2">
   <img
@@ -36,14 +36,7 @@ tags:
     className="h-5"
     src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/typescript/typescript.png"
   />
-  <img
-    className="h-5"
-    src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/react/react.png"
-  />
-  <img
-    className="h-5"
-    src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/nodejs/nodejs.png"
-  />
+  
 </div>
 
 <div className="flex flex-row gap-2 my-2">
@@ -54,13 +47,46 @@ tags:
   <span>A little more about me...</span>
 </div>
 
-```javascript
-const Lwin = {
-  code: [Javascript, Typescript, HTML, CSS, PHP],
-  tools: [React, Redux, Node, Storybook, Styled - Components, Jest],
-  architecture: ["Microservices", "Event-Driven", "Design System Pattern"],
-  challenge: "Nothing in life is permanent. so i'm trying to be always humble",
-};
-```
+<ul>
+			<li>.Net Developer 3+ years of software development(Web, API).</li>
+			<li> Experience in ASP.NET Core, MVC, Web REST API,Web Form.</li>
+			<li>Experience Client site UI and CSS responsive design and client side data binding using vue.js, vuetify, Bootstrap, jQuery, java script.</li>
+			<li>Experience integration Google Analytics for Web.</li>
+			<li>Experience Client site debugging like chrome, Firefox, Edge, IE Developer tool for JavaScript, Cache</li>
+			<li>Little experience in SignalR (for real- time web apps) with .net core</li>
+			<li>Experience in MSSQL Server, Stored Procedure, FUNCTION, VIEW.</li>
+			<li>Experience in IIS(Internet Information Services) Setup Configuration and Deployment.</li>
+			<li>Experience in Entity Framework Core, LINQ.</li>
+			<li>Experience in working with Git repositories and SVN.</li>
+			<li>Enthusiastic, self-motivated, fast learner and willing to learn new technology(.NET Core Technology, vue.js).</li>
+			<li>Tool experience: Visual Studio 2015, 2017, 2019, 2022, VS Code, Microsoft SQL Server Management, JetBrains Rider </li>
+
+		</ul>
+    <table >
+											<thead>
+												<tr>
+													<th>Level</th>
+													<th>Company Name</th>
+													<th>Duration</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Internship</td>
+													<td>NYT co.,ltd</td>
+													<td>1/5/2019 - 1/7/2019</td>
+												</tr>
+												<tr>
+													<td>Apprentice</td>
+													<td>NYT co.,ltd</td>
+													<td>28/11/2019 - 26/4/2022</td>
+												</tr>
+												<tr>
+													<td>Junior Software Developer</td>
+													<td>NYT co.,ltd</td>
+													<td>27/4/2022 - Current</td>
+												</tr>
+											</tbody>
+										</table>
 
 </div>
