--- a/content/profile/lwinmoepaing.mdx
+++ b/content/profile/lwinmoepaing.mdx
@@ -20,7 +20,7 @@ import SpacingDivider from "@/components/Common/SpacingDivider/SpacingDivider";
       <div className="h-28 w-28 rounded-3xl overflow-hidden mx-auto">
         <img src="https://avatars.githubusercontent.com/u/49163775?v=4" />
       </div>
-      <SpacingDivider size="sm"/>
+      <SpacingDivider size="sm" />
       <h3 className="flex flex-row max-w-[240px] mx-auto">
         <img
           src="https://raw.githubusercontent.com/lwinmoepaing/lwinmoepaing/main/img/gitto.gif"
@@ -28,12 +28,25 @@ import SpacingDivider from "@/components/Common/SpacingDivider/SpacingDivider";
         />
         <span> Hi, I'm Lwin Moe Paing </span>
       </h3>
-      <SpacingDivider size="sm"/>
+      <SpacingDivider size="sm" />
       <Counter />
-      <SpacingDivider size="sm"/>
+      <SpacingDivider size="sm" />
       <ContriSquareBox>
-        <p className="text-center text-sm mb-2"><img className="h-5 inline-block mr-1 relative -top-1" src="https://raw.githubusercontent.com/lwinmoepaing/lwinmoepaing/main/img/katto.gif"/>I’m looking for help with Javascript Language to build Many Free Softwares to help people who can't afford to pay!!</p>
-        <p className="text-center text-sm mb-2"><img className="h-5 inline-block mr-1 relative -top-1" src="https://raw.githubusercontent.com/lwinmoepaing/lwinmoepaing/main/img/katto.gif"/>How to reach me **lwinmoepaing.dev@gmail.com (or) [facebook](https://www.facebook.com/lwin.im/)**</p>
+        <p className="text-center text-sm mb-2">
+          <img
+            className="h-5 inline-block mr-1 relative -top-1"
+            src="https://raw.githubusercontent.com/lwinmoepaing/lwinmoepaing/main/img/katto.gif"
+          />
+          I’m looking for help with Javascript Language to build Many Free Softwares
+          to help people who can't afford to pay!!
+        </p>
+        <p className="text-center text-sm mb-2">
+          <img
+            className="h-5 inline-block mr-1 relative -top-1"
+            src="https://raw.githubusercontent.com/lwinmoepaing/lwinmoepaing/main/img/katto.gif"
+          />
+          How to reach me **lwinmoepaing.dev@gmail.com (or) [facebook](https://www.facebook.com/lwin.im/)**
+        </p>
       </ContriSquareBox>
     </div>
     <div className="flex flex-1 flex-row justify-center items-center">
@@ -50,4 +63,4 @@ import SpacingDivider from "@/components/Common/SpacingDivider/SpacingDivider";
       </div>
     </div>
   </div>
-</div> 
+</div>{" "}
