:bug: fix(profile): fix a bug where the links aren't clickable

--- a/content/profile/kev.mdx
+++ b/content/profile/kev.mdx
@@ -38,14 +38,14 @@ tags:
         <h2 className="text-lg">↗️ Hover on Profile to see more about me</h2>
 
         <div className="container">
-        * Reach me via 
+        Reach me via 
         <a href="https://www.facebook.com/0xkev" className="underline">Facebook</a> || 
         <a href="https://www.linkedin.com/in/0xkev/" className="underline">LinkedIn</a> ||
         <a href="mailto:kev992199@gmail.com" className="underline">Email </a>
         </div>
 
         <div className="container">
-        * Track my Progress on 
+        Track my Progress on 
         <a href="https://github.com/0xkev21" className="underline">Github</a> || 
         <a href="https://codepen.io/0xKev" className="underline">CodePen</a>
         </div>
