:fire: build(profile): update peterpausianlian profile

--- a/content/profile/peterpausianlian.mdx
+++ b/content/profile/peterpausianlian.mdx
@@ -8,3 +8,9 @@ tags:
   - Python
   - ReactJS
 ---
+
+import Peter from "@/components/Contributors/Peter/Peter";
+
+<div className="peter" id="root">
+  <Peter />
+</div>
