:fire: build(profile): add peterpausianlian profile

--- a/content/profile/peterpausianlian.mdx
+++ b/content/profile/peterpausianlian.mdx
@@ -11,6 +11,8 @@ tags:
 
 import Peter from "@/components/Contributors/Peter/Peter";
 
-<div className="peter" id="root">
-  <Peter />
+<div className="peter">
+  <div id="root">
+    <Peter />
+  </div>
 </div>
