:fire: build(profile): add nyeinminhtet profile

--- a/content/profile/ngwesinsandar.mdx
+++ b/content/profile/ngwesinsandar.mdx
@@ -3,19 +3,16 @@ name: Ngwe Sin Sandar
 description: just a developer falling in love with coding
 image: "https://avatars.githubusercontent.com/u/106171887?v=4"
 tags:
-- Frontend
-- JavaScript
-- ReactJS
-- VueJS
-- NextJS
-- PHP
-- Laravel
+  - Frontend
+  - JavaScript
+  - ReactJS
+  - VueJS
+  - NextJS
+  - PHP
+  - Laravel
 ---
 
-import {
-  IoLogoFacebook,
-  IoLogoGithub
-} from "react-icons/io5";
+import { IoLogoFacebook, IoLogoGithub } from "react-icons/io5";
 import { BsArrowDownLeftCircleFill } from "react-icons/bs";
 
 <main className="w-full">
@@ -50,13 +47,14 @@ import { BsArrowDownLeftCircleFill } from "react-icons/bs";
 class AboutMe {
   public $name, $relationship;
 
-  public function __construct(string $name, string $relationship) {
-    $this->name = $name;
-    $this->relationship = $relationship;
-  }
+public function \_\_construct(string $name, string $relationship) {
+$this->name = $name;
+$this->relationship = $relationship;
+}
 }
 
 const about_me = new AboutMe("Ngwe Sin Sandar", "single");
+
 ```
         </div>
       </div>
@@ -86,3 +84,4 @@ const about_me = new AboutMe("Ngwe Sin Sandar", "single");
     </div>
   </div>
 </main>
+```
