:fire: build(profile): add saungyati profile

--- a/content/profile/saungyati.mdx
+++ b/content/profile/saungyati.mdx
@@ -10,7 +10,7 @@ tags:
   - Bootstrap
 ---
 
-<>
+    <>
       <div className=" h-[1000px] border  flex flex-col items-center justify-center">
         <div className=" md:flex gap-5">
           <div className=" ms-[90px]">
@@ -27,36 +27,36 @@ tags:
           </div>
           <div className="chat chat-start mt-16 w-[370px]">
             <div className="chat-bubble relative bg-purple-400 mx-auto font-serif shadow-md shadow-purple-300">
-              <p className=" absolute text-2xl font-semibold p-2 rounded-3xl bottom-[140px] shadow-inner shadow-purple-300 bg-purple-950">
+              <span className=" absolute -top-7 text-2xl font-semibold p-2 rounded-3xl shadow-inner shadow-purple-300 bg-purple-950">
                 About Me
-              </p>
+              </span>
               <img
-                className=" absolute bottom-[130px] left-[200px] rounded-[100%] w-[80px]"
+                className=" absolute -top-8 right-4 rounded-[100%] w-[80px]"
                 src="https://i.pinimg.com/236x/cd/2e/08/cd2e0863cbcf0a85ba7d4d59ac871f95.jpg"
                 alt=""
               />
               <br />
-              <p className=" text-black">
+              <span className=" text-black">
                 Hi, there!! I am just a frontend development learner and attempt
                 to achieve my big dream. I am keen on coding with a cup of
                 coffee and watching k-drama series.
-              </p>
+              </span>
             </div>
           </div>
         </div>
 
         <div className="chat chat-start mt-10 w-[360px] flex-wrap md:ms-[280px]">
           <div className="chat-bubble relative bg-purple-400 mx-auto font-serif shadow-md shadow-purple-300">
-            <p className=" absolute text-2xl font-semibold p-2 rounded-3xl bottom-[120px] shadow-inner shadow-purple-300 bg-purple-950">
+            <span className=" absolute text-2xl font-semibold p-2 rounded-3xl -top-5 shadow-inner shadow-purple-300 bg-purple-950">
               Skills
-            </p>
+            </span>
             <img
-              className=" absolute bottom-[110px] left-[220px] rounded-[100%] w-[60px]"
+              className=" absolute -top-7 right-7 rounded-[100%] w-[60px]"
               src="https://i.pinimg.com/236x/03/fb/86/03fb86640a39f8b681e495533b83c62d.jpg"
               alt=""
             />
             <br />
-            <p className=" text-black">
+            <span className=" text-black">
               html{" "}
               <progress
                 className="progress w-56 ms-2"
@@ -81,7 +81,7 @@ tags:
                 value="70"
                 max="100"
               ></progress>
-            </p>
+            </span>
           </div>
         </div>
 
@@ -107,7 +107,7 @@ tags:
             src="https://i.pinimg.com/236x/97/31/6f/97316ff0c4da0bea020e63d16075e987.jpg"
             alt=""
           />
-          <p>LinkIn : http:www.LinkedIn.com</p>
+          <p>LinkIn : http//www.LinkedIn.com</p>
         </div>
       </div>
     </>
