:bug: fix: commitlint not installed

--- a/content/profile/aungkhaingkhant.mdx
+++ b/content/profile/aungkhaingkhant.mdx
@@ -16,7 +16,7 @@ tags:
      <div className = "desc">
           <p>Passionate Java Developer</p>
           <p>Loves to learn.</p>
-          <p>Khit Khit Lay's Ko Ko</p>
+          <p>I write mediocre code while acting like I know what I'm doing</p>
      </div>
      <div className = "flex flex-row content-center">
                <a href="https://www.github.com/jironemo/" target= "_blank" className = "flex flex-row content-center items-center"> <img className = "icon" src="https://cdn-icons-png.flaticon.com/512/25/25231.png"/></a>
