:fire: build(profile): add shinthanthtun's profile

--- a/content/profile/shinthanthtun.mdx
+++ b/content/profile/shinthanthtun.mdx
@@ -16,12 +16,12 @@
     <p class="text-left text-white-800 mt-1">
       {
         "name" : ShinThantHtun
-        "description" : A INTP-T nerd logician who love science and math.
-        "tags" : - JavaScript (React, Next, Node)
-                 - TypeScript
-                 - C++
-                 - Rust
-                 - Zig
+        "about-me" : A INTP-T nerd logician who love science and math.
+        "theThingsILearned" : - JavaScript (React, Next, Node)
+                              - TypeScript
+                              - C++
+                              - Rust
+                              - Zig
       }
     </p>
 </div>
