--- a/content/profile/shinthanthtun.mdx
+++ b/content/profile/shinthanthtun.mdx
@@ -1,15 +1,15 @@
 ---
-{
-  "name" : ShinThantHtun
-  "description" : A INTP-T nerd logician who love science and math.
-  "image" : "https://avatars.githubusercontent.com/u/143016385?v=4"
-  "tags" : - JavaScript (React, Next, Node)
-           - TypeScript
-           - C++
-           - Rust
-           - Zig
-}
+name: Shin Thant Htun
+description: A INTP-T nerd logician who love science and math.
+image: "https://avatars.githubusercontent.com/u/143016385?v=4"
+tags:
+  - JavaScript (React, Next, Node)
+  - TypeScript
+  - C++
+  - Rust
+  - Zig
 ---
+         
 
 <div className="max-w-lg mx-auto my-10 bg-grey rounded-lg">
     <img class="w-32 h-32 block object-cover w-1/4 rounded-full ring-4 ring-white-500/50 ring-offset-[10px] mx-auto" src="https://avatars.githubusercontent.com/u/143016385?v=4" alt="Profile picture"/>
