:bug: fix(profile): fixed some eslint error

--- a/content/profile/shinthanthtun.mdx
+++ b/content/profile/shinthanthtun.mdx
@@ -9,19 +9,17 @@ tags:
   - Rust
   - Zig
 ---
-         
-
 <div className="max-w-lg mx-auto my-10 bg-grey rounded-lg">
     <img class="w-32 h-32 block object-cover w-1/4 rounded-full ring-4 ring-white-500/50 ring-offset-[10px] mx-auto" src="https://avatars.githubusercontent.com/u/143016385?v=4" alt="Profile picture"/>
-    <p class="text-left text-white-800 mt-1">
-      {
+    <p class="text-left text-white-800 mt-5">
+      \{
         "name" : ShinThantHtun
         "about-me" : A INTP-T nerd logician who love science and math.
-        "theThingsILearned" : - JavaScript (React, Next, Node)
-                              - TypeScript
-                              - C++
-                              - Rust
-                              - Zig
-      }
+        "theThingsILearned" : \- JavaScript (React, Next, Node)
+                              \- TypeScript
+                              \- C++
+                              \- Rust
+                              \- Zig
+      \}
     </p>
 </div>
