:lipstick: style(profile): updating my profile

--- a/content/profile/aungkhaingkhant.mdx
+++ b/content/profile/aungkhaingkhant.mdx
@@ -9,15 +9,64 @@ tags:
      - Frontend
      - Backend
      - RDBMS
+     - NoSQL
 ---
 
 <div className = "jiro flex flex-col content-center items-center">
      <img src= "https://avatars.githubusercontent.com/u/55285418?v=4" className="profile"/>
-     <div className = "desc">
-          <p>Passionate Java Developer</p>
-          <p>Loves to learn.</p>
-          <p>I write mediocre code while acting like I know what I'm doing</p>
+     <div className = "flex flex-col content-center items-center text-center personal-detail">
+          <p>Hi, I am <span className="name">Aung Khaing Khant</span></p>
+          <p>-- Son, Khit's Boyfriend, Software Developer, Coffee Addict. --</p>
      </div>
+     <div className="quote">
+          <p>I write mediocre code pretending I know what I'm doing</p> 
+     </div>
+     <div className="flex flex-row flex-wrap">
+          <div className = "flex flex-col content-center items-center desc">
+               <h4>Current Title</h4>
+               <p>Senior Java Developer</p>
+          </div>
+          <div className = "flex flex-col content-top items-center text-center desc">
+                    <h4>Current Tech Stack</h4>
+                    <p>Java, Angular, MySQL, Linux Servers</p>
+          </div>
+     </div>
+     <div className="detail flex flex-row flex-wrap about content-center items-center">
+               I am currently writing RESTful APIs in Java using the Spring Framework, and consuming them from Angular.
+               As a senior developer, I also take part in system design decisions and stakeholder management.
+               Projects I am currently responsible for include:
+               {<ul>
+                    <li>e-Library Front-end & Admin Panel </li>
+                    <li>e-Payment Integration (Visa, Master, MPU, e-Money) </li>
+                    <li>News & Media Portal implementing Liferay CMS</li>
+               </ul>}
+     </div>
+     <div className = "info familiar text-center">
+         <h4>Familiar With</h4>
+          <div className= "flex flex-wrap justify-center items-center badge-container gap-4">
+               <p > RESTful API Development</p>
+               <p>Spring Boot</p>
+               <p>Angular</p>
+               <p>Software Development Lifecycle</p>
+               <p>Liferay CMS</p>
+               <p> Python</p>
+               <p> SQL</p>
+               <p> NoSQL</p>
+               <p> Linux </p>
+          </div>
+     </div>
+     <div className = "info text-center">
+         <h4>Interested In</h4>
+          <div className= "flex flex-wrap justify-center items-center badge-container gap-4">
+              <p> JavaScript</p>
+              <p> Software Engineering </p>
+              <p> Java </p>
+              <p> Cloud Technologies </p>
+              <p> DevOps </p>
+              <p> DevSecOps </p>
+          </div>
+     </div>
+
      <div className = "flex flex-row content-center">
                <a href="https://www.github.com/jironemo/" target= "_blank" className = "flex flex-row content-center items-center"> <img className = "icon" src="https://cdn-icons-png.flaticon.com/512/25/25231.png"/></a>
                <a href="https://www.facebook.com/jiro.dev/" className = "flex flex-row content-center items-center"> <img className = "icon" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png"/></a>
